--- a/java/jdk8/Dockerfile
+++ b/java/jdk8/Dockerfile
@@ -1,5 +1,8 @@
 FROM alpine:latest
-RUN apk --update add bash openjdk8-jre-base && \
+RUN apk --update add bash openjdk8-jre-base wget ca-certificates && \
+    wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub && \
+    wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.29-r0/glibc-2.29-r0.apk && \
+    apk add glibc-2.29-r0.apk && \
       rm -rf /var/cache/apk/*
 ENV JAVA_HOME /usr/lib/jvm/default-jvm
 ENV PATH ${PATH}:${JAVA_HOME}/bin
