增加基于centos的jdk镜像，并解决时区和编码问题

--- a/java/centos7.6_jdk8/Dockerfile
+++ b/java/centos7.6_jdk8/Dockerfile
@@ -1,5 +1,5 @@
 FROM centos:7.6.1810
-MAINTAINER chenhong
+MAINTAINER chenhong dan.dessler@163.com
 ADD jdk1.8.0_181 /usr/local/jdk1.8.0_181
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 RUN echo 'Asia/Shanghai' >/etc/timezone
